# chimera-v4.0

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-cloudrun.yml  frontend-cloudflare-pages.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/agents/: conductor.py
backend/app/api/: __init__.py  routes.py
backend/app/api/endpoints/: __init__.py  agents.py  analysis.py  backtest.py  data.py  health.py  models.py  predictions.py  training.py
backend/app/core/: config.py  dataset.py  inference.py  logging_config.py  schemas.py  storage_gcs.py  training.py
backend/app/ml/: model_manager.py
docs/: DATA_STORAGE_APPENDIX.md  ENDPOINTS.md  ENV_VARS.md  TECH_STACK.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/assets/images/: README.md
frontend/public/assets/video/: README.md
frontend/src/: App.jsx  app.tsx  main.jsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.jsx
frontend/src/components/charts/: MetricsBarChart.tsx  RocCurveChart.tsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: Agents.jsx  Analysis.jsx  Backtest.jsx  Dashboard.jsx  Dashboard.tsx  Dataset.tsx  Docs.tsx  Evaluate.tsx  IntroScreen.jsx  Login.jsx  Login.tsx  Predict.tsx  Predictions.jsx  Settings.jsx  Training.jsx
frontend/src/services/: api.js
frontend/src/styles/: main.css
project-docs/: TECHNICAL_DOCUMENTATION.md
